--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="podcast_favicon.png" type="image/x-icon">
-    <title>Site de Podcast Moderne</title>
+    <link rel="icon" href="assets/podcast_favicon.png" type="image/x-icon">
+    <title>Tech Talk</title>
   </head>
   <body>
     <div id="root"></div>
